--- a/TP_Intermedio/Ejercicio_2/docker-compose.yml
+++ b/TP_Intermedio/Ejercicio_2/docker-compose.yml
@@ -12,8 +12,16 @@ services:
       - POSTGRES_USER=postgres
     volumes:
       - ./postgres-db:/var/lib/postgresql/data
+      - ./init.sh:/docker-entrypoint-initdb.d/init.sh
     ports:
       -  5455:5432
+  adminer:
+    image: adminer
+    hostname: adminer
+    container_name: adminer
+    restart: always
+    ports:
+      - 8080:8080
 volumes:
   postgres-database:
     external: true
